# kmviz

./: .gitignore  404.html  LICENSE  README.md  flake.nix  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  doc.yml  release.yml
advanced/: index.html
api/: index.html
api/info/: index.html
api/metadata/: index.html
api/session/: index.html
builtins/metadb/: index.html
builtins/notifier/: index.html
builtins/provider/: index.html
cli/: index.html
cli/api/: index.html
cli/app/: index.html
cli/config/: index.html
cli/plugin/: index.html
configuration/: index.html
configuration/user_options/: index.html
deploy/: index.html
deploy/compose/: index.html
deploy/docker/: index.html
docker/: Dockerfile
docs/: mkdocs.yml
docs/docs/: advanced.md  builtin.md  configuration.md  database.md  deploy.md  index.md  installation.md  interface.md  introduction.md  plot_only.md  plugin.md  quickstart.md
installation/: index.html
interface/: index.html
interface/database/: index.html
interface/plot/: index.html
interface/plot_only/: index.html
interface/session/: index.html
introduction/: index.html
kmviz/: __init__.py  __main__.py  api.py  app.py  init.py
kmviz/assets/: dashAgGridComponentFunctions.js  dmc.css  fix_color_picker_radius.css  grid.css  help.md  kmviz.css  scroll.css  sidebar.css
kmviz/core/: __init__.py  (+6 more)
plugins/: index.html
quickstart/: index.html
scripts/: patch_kmindex.sh
search/: search_index.json
stylesheets/: extra.css
tests/: config.toml  config.yaml  fof.txt  metadata.tsv  query.fa
(+586 files in other folders)
